@@ -1,3 +1,15 @@
+Thu Apr 20 16:23:23 1995  Theodore Y. Ts'o  (tytso@dcl)
+
+	* mk_req.c (krb5_mk_req): Use krb5_sname_to_principal() in order
+		to create the service principal from the service and
+		hostname pair.  This allows for the host cannoncialization
+		to work correctly.
+
+	* mk_req_ext.c (krb5_mk_req_extended): Revamp checksum handling
+		code so that no checksum is performed in in_data is NULL,
+		and the special case handing of cksumtype == 0x8003 for
+		the GSSAPI library is handled correctly.
+
 Wed Apr 19 13:39:34 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* init_ctx.c: (krb5_init_context) initialize context default
